--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     height: 80vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
