Add toggle button to turn grid line on or off

--- a/style.css
+++ b/style.css
@@ -46,17 +46,20 @@ width: 100vw;
 .innerDiv {
     flex-grow: 1;
     flex-shrink: 1;
-    border: .3px solid rgba(191,191,191, .7);
+    border: 1px solid rgba(191,191,191, .7);
 }
 
 .buttons {
-    width: 80px;
-    height: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
-button {
+button,input {
     background-color: rgb(243, 207, 198);
     padding: 5px;
     border-radius: 5px;
     border: 2px rgba(00,00,00,.5) solid;
+    width: 80px;
+    height: 50px;
 }
