--- a/style.css
+++ b/style.css
@@ -1,28 +1,32 @@
+/* Google Font Imports */
+@import url('https://fonts.googleapis.com/css2?family=Rampart+One&family=Roboto:wght@300&display=swap');
+
 body {
     /* height: 80vh; */
     display: flex;
-    justify-content: space-around;
     flex-direction: column;
     align-items: center;
-    gap: 300px;
+    gap: 200px;
     background-color: #E9D9D4;
     margin: 0px;
 }
 
 .top {
     width: 100vw;
-    height: 10vh;
+    height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #FEFCFF;
     color:rgba(00,00,00,.6);
+    font-size: 60px;
+    font-family: 'Rampart One', cursive;
 }
 
 .middle {
 display: flex;
 flex-direction: row;
-justify-content: space-around;
+justify-content: space-evenly;
 width: 100vw;
 }
 
@@ -52,7 +56,12 @@ width: 100vw;
 .buttons {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 5px;
+}
+
+p {
+    font-family: 'Rampart One';
+    font-size: 25px;
 }
 
 button,input {
@@ -62,4 +71,10 @@ button,input {
     border: 2px rgba(00,00,00,.5) solid;
     width: 80px;
     height: 50px;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.bottom {
+    margin-top: 200px;
 }
