--- a/style.css
+++ b/style.css
@@ -50,13 +50,18 @@ width: 100vw;
 .innerDiv {
     flex-grow: 1;
     flex-shrink: 1;
-    border: 1px solid rgba(191,191,191, .7);
+    border: 1px solid rgb(233, 217, 212, .5);
 }
 
 .buttons {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    margin-top: -35px;
+}
+
+button:hover, input:hover {
+    background-color: white;
 }
 
 p {
@@ -65,13 +70,14 @@ p {
 }
 
 button,input {
-    background-color: rgb(243, 207, 198);
+    background-color: rgba(00,00,00,.6);
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 2px rgba(00,00,00,.5) solid;
     width: 80px;
     height: 50px;
     font-family: 'Roboto', sans-serif;
+    color: rgb(233, 217, 212);
 }
 
 
